# Network-IM-tool

./: .gitignore  README.md
server/: CMakeLists.txt  chat_server.cpp
server/include/base/: ThreadPool.h  Timestamp.h  noncopyable.h
server/include/http/: HttpContext.h  HttpRequest.h  HttpResponse.h  HttpServer.h
server/include/mysql/: Mysql.h  MysqlconntectPool.h
server/include/net/: Acceptor.h  Buffer.h  Channel.h  Connection.h  EventLoop.h  InetAddress.h  Poller.h  Socket.h  TcpServer.h
server/include/redis/: Redis.h  RedisConnectPool.h
server/include/timer/: Timer.h  TimerQueue.h
前端/: Chat_client.pro  Resource.qrc  chatwindow.cpp  chatwindow.h  chatwindow.ui  filetransfer.cpp  filetransfer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tcpconnection.cpp  tcpconnection.h
